# flotilla

./: .ackrc  .dockerignore  .env  .env.local  .env.template  .fdignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  build.sh  capacitor.config.ts  check.sh  link_deps  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  server.js  skills-lock.json  tailwind.config.js  vite.config.server.ts  vite.config.ts  zapstore.yaml
.agents/skills/welshman/: SKILL.md
.agents/skills/welshman-app/: SKILL.md
.gitea/workflows/: container-publish.yml  docker-publish.yml
.github/workflows/: sync_rebase_publish.yml
android/: build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
e2e/: smoke.spec.ts
e2e/support/: fixtures.ts  relayMocks.ts
ios/App/: Podfile
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: actionItems.ts  analytics.ts  chats.ts  comments.ts  content.ts  deletes.ts  device.ts  drafts.ts  env.ts  featured.ts  feeds.ts  groups.ts  healthChecks.ts  invites.ts  lightning.ts  members.ts  modal.ts  nip46.ts  notifications.ts  policies.ts  polls.ts  pomade.ts  profiles.ts  reactions.ts  recent.ts  relays.ts  reports.ts  repository.ts  rooms.ts  routes.ts  session.ts  settings.ts  social.ts  storage.ts  sync.ts  theme.ts  title.ts  uploads.ts  voice.ts
src/lib/: feeds.ts  html.ts  indexeddb.ts  livekit.ts  util.ts
src/routes/: +layout.svelte  +page.svelte
static/.well-known/: assetlinks.json
(+329 files in other folders)
